@@ -183,9 +183,8 @@
 			<drawimage condition="not{hasVT}" x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="icon" path="textBG" />
 		</area>
 		<area x="21%" y="85%" width="2%" height="{areawidth}" layer="6">
-			<!--<drawimage condition="{isRecording}" x="0" y="0" width="{areawidth}*0.8" height="{areawidth}*0.8" imagetype="icon" path="recInactive" />
-			<drawimage condition="{isRecording}" animtype="blink" animfreq="1000" x="0" y="0" width="{areawidth}*0.8" height="{areawidth}*0.8" imagetype="icon" path="rec" />-->
-			<drawimage condition="{isRecording}" x="0" y="0" width="{areawidth}*0.8" height="{areawidth}*0.8" imagetype="icon" path="rec" />
+			<drawimage condition="{isRecording}" x="0" y="0" width="{areawidth}*0.8" height="{areawidth}*0.8" imagetype="icon" path="recInactive" />
+			<drawimage condition="{isRecording}" animtype="blink" animfreq="1000" x="0" y="0" width="{areawidth}*0.8" height="{areawidth}*0.8" imagetype="icon" path="rec" />
 		</area>
 	</statusinfo>
 
